Changelog
=========

0.3 - unreleased
----------------

- Added package infrastructure.
  [hannosch]

- Moved the source code from https://svn.gocept.com/repos/gocept/ZNagios/trunk
  to the svn.zope.org repository at revision 29315.
  [hannosch]

0.2 - 2008-05-26
----------------

- Remove hard-coded authorization string.
  [ctheune]

- A script for reading data from a ZEO monitor server.
  [ctheune]

- Added basic munin support.
  [ctheune]

- Original implementation.